# consumerfinance.gov

./: .babelrc  .coveragerc  .dockerignore  .editorconfig  .env_SAMPLE  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .pnp.cjs  .pre-commit-config.yaml  .prettierignore  .python_env  .python_env_SAMPLE  .sauceignore  .snyk  .sonarcloud.properties  .stylelintrc.cjs  .stylelintrc.json  .tool-versions  .travis.yml  .yarnrc  .yarnrc.yml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile-gulp  Dockerfile.frontend  Dockerfile.rhel6  FindComponent.psql  Gruntfile.js  INSTALL.md  (+116 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.sauce/: config.yml
_defaults/: mappings.json  posts_mappings.json
_includes/: article.html  breadcrumbs.html  category-slug.html  contact-macro.html  email-subscribe-form.html  event-agenda-table.html  event-post-macros.html  events-hero.html  events-posts.html  footer.html  header.html  hero.html  leadership-calendar-table.html  macros.html  nav-items-toplevel.html  nav-secondary.html  pdfreactor-footer.html  popular-stories.html  post-filters-form.html  post-filters.html  post-macros.html  posts-paginated.html  related-links.html  related-posts.html  rss.html  sidenav.html  tags.html  upcoming-events.html
_layouts/: 404.html  500.html  article.html  base.html  calendar-event-filters-form.html  comments.html  (+37 more)
apps/core/: MANIFEST.in  README.md  pyproject.toml
apps/core/core/: feature_flags.py  govdelivery.py  middleware.py
apps/core/core/tests/: test_feature_flags.py
apps/core/core/tests/templatetags/: test_jsonify.py
apps/core/core/tests/testutils/: test_baker.py
apps/core/core/testutils/: baker.py  mock_cache_backend.py  mock_staticfiles.py  runners.py  test_cases.py
apps/v1/: pyproject.toml  tox.ini
apps/v1/v1/: admin_forms.py  admin_views.py  blocks.py  forms.py  image_formats.py  query.py
apps/v1/v1/atomic_elements/: schema.py  tables.py
apps/v1/v1/jinja2/v1/: campaign_page.html  template_debug.html
apps/v1/v1/jinja2/v1/blog/: blog_page.html
apps/v1/v1/jinja2/v1/browse-filterable/: index.html
apps/v1/v1/jinja2/v1/events/: _macros.html  event.html
apps/v1/v1/jinja2/v1/includes/: article.html
apps/v1/v1/jinja2/v1/includes/atoms/: checkbox.html  radio-button.html
apps/v1/v1/jinja2/v1/includes/blocks/schema/: faq-group.html
apps/v1/v1/jinja2/v1/includes/molecules/: contact-email.html  global-eyebrow.html  pagination.html  quote.html  related-metadata.html
apps/v1/v1/jinja2/v1/includes/organisms/: featured-content.html  filterable-list.html  info-unit-group-2.html  item-introduction.html  post-preview.html  secondary-navigation-fig.html  secondary-navigation.html  table.html  video-player.html
apps/v1/v1/jinja2/v1/includes/organisms/email-popup/: base.html  debt.html  oah.html
apps/v1/v1/jinja2/v1/includes/templates/: render_block.html
apps/v1/v1/jinja2/v1/layouts/: 404.html  layout-1-3.html  layout-2-1.html
apps/v1/v1/jinja2/v1/newsroom/: index.html
apps/v1/v1/jinja2tags/: fragment_cache.py
apps/v1/v1/management/commands/: _sync_storage_base.py  delete_page.py  import_content_owners.py  invalidate_page_cache.py  search_pagerevisions.py  sync_document_storage.py
apps/v1/v1/migrations/: 0198_recreated.py  0199_2022_squash.py  0200_related_posts_tag_filtering.py  0201_remove_well_with_ask_search.py  0202_add_research_hub_filterable_page.py  0203_add_projected_months_simple_chart.py  0205_simple_chart_default_series.py  0206_add_faq_group_and_expandable_option.py  0207_deprecate_feedback_block.py  0208_deprecate_page_archiving.py  0209_delete_conferenceregistration.py  0210_expandable_info_units.py  0211_simple_chart_text_update.py  0214_convert_email_signups_blocks_in_streamfields_to_snippets.py  0216_heading_block_h5s.py  0218_alter_legacyblogpage_content.py  0219_rename_policy_compliance_category.py  0221_update_how_to_schema.py
apps/v1/v1/models/: banners.py  base.py  caching.py  landing_page.py  learn_page.py  story_page.py  sublanding_page.py
apps/v1/v1/template_debug/: __init__.py
apps/v1/v1/templates/v1/: _list_page_metadata.html  category_icon_report.html  export_feedback.html  report_no-xlsx_base.html
apps/v1/v1/templatetags/: app_urls.py  email_popup.py
apps/v1/v1/tests/: settings.py  test_admin_views.py  test_blocks_email_signup.py  test_documents.py  test_filterable_list_form.py  test_page_validation.py  test_signals.py  urls.py
apps/v1/v1/tests/atomic_elements/: test_atoms.py
apps/v1/v1/tests/atomic_elements/organisms/: test_filterable_list.py  test_organisms.py  test_related_posts.py
apps/v1/v1/tests/jinja2tags/: test_jinja2tags.py
apps/v1/v1/tests/management/commands/: test_update_chart_block_dates.py
apps/v1/v1/tests/models/: test_author_names.py  test_caching.py  test_filterable_list_mixins.py  test_portal_topics.py  test_sublanding_page.py
apps/v1/v1/tests/templates/foo/bar/: include.html
apps/v1/v1/tests/util/: test_migrations.py
apps/v1/v1/tests/views/: test_reports_view.py  test_template_debug.py
apps/v1/v1/tests/wagtail_pages/: test_page_states.py
apps/v1/v1/util/: __init__.py
apps/v1/v1/views/: reports.py
(+15496 files in other folders)
